CSS design added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://selvam.github.io/assignment17",
+  "homepage": "https://selvam.github.io/login",
   "private": true,
   "version": "0.0.0",
   "type": "module",
